--- a/src/components/user/user.module.css
+++ b/src/components/user/user.module.css
@@ -26,3 +26,21 @@ flex-direction: column;
             align-items: center;
             padding-bottom: 20px;
 }
+
+.username {
+    margin-bottom: 0;
+    font-weight: bold;
+    font-size: x-large;
+}
+
+.tag {
+    margin-top: 0;
+    color: grey;
+    font-style: italic;
+}
+
+.location {
+    font-weight: bold;
+    font-size: large;
+    color: grey;
+}
