--- a/src/components/user/user.module.css
+++ b/src/components/user/user.module.css
@@ -1,6 +1,12 @@
 .profile{
     box-shadow: #000000 2px 2px 4px;
     
+        margin-top: 50px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            width: 30%;
+    
 }
 .description{
 display: flex;
@@ -19,6 +25,7 @@ flex-direction: column;
     display: flex;
     justify-content: space-evenly;
     background-color: grey;
+    padding: 0;
 }
 .rating{
         display: flex;
